# astro

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
astro/: CMakeLists.txt  Exceptions.h  Interpolate.cpp  Interpolate.h  Math.h  ODE.cpp  ODE.h  Observer.cpp  Observer.h  Orbit.cpp  Orbit.h  OrbitElements.cpp  OrbitElements.h  PCDM.cpp  PCDM.h  Propagator.h  RK1_4.h  RK4.h  RKF45.cpp  RKF45.h  RKF78.cpp  RKF78.h  ReferenceFrame.cpp  ReferenceFrame.h  SpiceCore.cpp  SpiceCore.h  State.cpp  State.h  Time.cpp  Time.h  Util.cpp  Util.h  test.cpp  test.h
example/: .main.cpp.swp  CMakeLists.txt  example.cpp  main.cpp  propagate.cpp
test/: CMakeLists.txt  OrkExt.h  testInterpolate.cpp  testNumInt.cpp  testODE.cpp  testObserver.cpp  testOrbit.cpp  testOrbitElements.cpp  testPCDM.cpp  testReferenceFrame.cpp  testSpiceCore.cpp  testState.cpp  testTime.cpp  testUtil.cpp
